--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,3 +40,16 @@
     background-color: #333!important;
     color: #fff!important;
 }
+
+.preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-image: url('../images/spinner.gif');
+    background-repeat: no-repeat; 
+    background-color: #222;
+    background-position: center;
+ }
