--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,47 +1,68 @@
-.bd-placeholder-img {
+/**
+ * discord-webhook
+ *
+ * @copyright Yağızhan Burak Yakar (https://github.com/evrifaessa)
+ * @license   Apache-2.0
+ *
+ * Copyright, Yağızhan Burak Yakar
+ * This source file is subject to the Apache-2.0 License that is bundled
+ * with this source code in the file LICENSE
+ */
+
+ .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
     -webkit-user-select: none;
     -moz-user-select: none;
     user-select: none;
-}
-@media (min-width: 768px) {
+  }
+  
+  @media (min-width: 768px) {
     .bd-placeholder-img-lg {
-        font-size: 3.5rem;
+      font-size: 3.5rem;
     }
-}
-
-.bg-dark p, .bg-dark h2, .bg-dark h3, .bg-dark h4, .bg-dark h5, .bg-dark h6, .bg-dark .form-label {
+  }
+  
+  .bg-dark p,
+  .bg-dark h2,
+  .bg-dark h3,
+  .bg-dark h4,
+  .bg-dark h5,
+  .bg-dark h6,
+  .bg-dark .form-label {
     color: #fff!important;
-}
-
-.bg-dark input:-webkit-autofill { 
+  }
+  
+  .bg-dark input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0 1000px white inset !important;
     -webkit-text-fill-color: green;
   }
-  .bg-dark input:-webkit-autofill:focus { 
+  
+  .bg-dark input:-webkit-autofill:focus {
     -webkit-box-shadow: 0 0 0 1000px white inset !important;
     -webkit-text-fill-color: green;
   }
-
-.bg-dark input, .bg-dark textarea { 
+  
+  .bg-dark input,
+  .bg-dark textarea {
     background-color: #222;
     color: #fff;
     border: #444;
-}
-
-.bg-dark .input-group-text { 
+  }
+  
+  .bg-dark .input-group-text {
     background-color: #333;
     color: #fff;
     border: #444;
-}
-
-.bg-dark input:focus, .bg-dark textarea:focus {
+  }
+  
+  .bg-dark input:focus,
+  .bg-dark textarea:focus {
     background-color: #333!important;
     color: #fff!important;
-}
-
-.preloader {
+  }
+  
+  .preloader {
     position: absolute;
     top: 0;
     left: 0;
@@ -49,7 +70,7 @@
     height: 100%;
     z-index: 9999;
     background-image: url('../images/spinner.gif');
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
     background-color: #222;
     background-position: center;
- }
+  }
