brand new image preview

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -73,4 +73,5 @@
     background-repeat: no-repeat;
     background-color: #222;
     background-position: center;
+    background-size: 125px 125px;
   }
